--- a/source/styles/global/fonts.scss
+++ b/source/styles/global/fonts.scss
@@ -71,7 +71,7 @@
 
 @font-face {
   font-family: "RussoOne";
-  src: url("../fonts/jura/RussoOne.woff") format("woff"),
-    url("../fonts/jura/RussoOne.woff2") format("woff2");
+  src: url("../fonts/RussoOne.woff") format("woff"),
+    url("../fonts/RussoOne.woff2") format("woff2");
   font-style: normal;
 }
