--- a/source/template/sections/one.pug
+++ b/source/template/sections/one.pug
@@ -8,7 +8,7 @@ section.one
                     .one__title
                         h1 
                             span Кибер пространство <br>
-                            | от&nbsp;&nbsp;<span>CyberX</span>&nbsp;&nbsp;&ndash;&nbsp;&nbsp;<b>франшиза <br> с 3 факторами успеха</b>
+                            | от&nbsp;&nbsp;<span>CyberX&nbsp;&nbsp;&ndash;&nbsp;&nbsp;</span><b>франшиза <br> с 3 факторами успеха</b>
                     ol.one__context
                         li Вы понимаете, что дешево и хорошо не бывает, но переплачивать за франшизу не готовы?
                         li Вам нужен усиливающийся и прогрессирующий бизнес, который принесет большие деньги быстро и безопасно?
