--- a/source/styles/sections/first.scss
+++ b/source/styles/sections/first.scss
@@ -1,6 +1,6 @@
-.one {
+.first {
     position: relative;
-    background: url('../images/one/one.png') center center no-repeat;
+    background: url('../images/first/first_bg.png') center center no-repeat;
     background-size: cover;
     overflow: hidden;
     
