--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -7,4 +7,4 @@ html(lang='ru')
         link(rel="stylesheet" href="css/main.min.css")
         title CyberX
     body
-        include sections/one
+        include sections/first
