--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -8,3 +8,5 @@ html(lang='ru')
         title CyberX
     body
         include sections/first
+        include sections/form_one
+        include sections/second
