--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -3,7 +3,10 @@
 @import "global/mixins";
 @import "global/fonts";
 @import "global/base";
+@import "global/icons";
+@import "global/sprite";
 
 @import "sections/first";
 @import "sections/form_one";
 @import "sections/second";
+@import "sections/third";
