--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -10,3 +10,4 @@ html(lang='ru')
         include sections/first
         include sections/form_one
         include sections/second
+        include sections/third
