first block add

--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -11,3 +11,4 @@ html(lang='ru')
         include sections/form_one
         include sections/second
         include sections/third
+        include sections/fourth
