--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -11,3 +11,7 @@
 @import "sections/second";
 @import "sections/third";
 @import "sections/fourth";
+@import "sections/fifth";
+@import "sections/form_too";
+@import "sections/sixth";
+
