--- a/source/styles/global/icons.scss
+++ b/source/styles/global/icons.scss
@@ -13,6 +13,10 @@
     @include sprite($plus);
 }
 
+.icon-plus-red {
+    @include sprite($plus-red);
+}
+
 .icon-calendar {
     @include sprite($calendar);
 }
