--- a/source/styles/global/sprite.scss
+++ b/source/styles/global/sprite.scss
@@ -10,16 +10,16 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
 $angle-name: 'angle';
-$angle-x: 210px;
-$angle-y: 120px;
-$angle-offset-x: -210px;
-$angle-offset-y: -120px;
+$angle-x: 180px;
+$angle-y: 150px;
+$angle-offset-x: -180px;
+$angle-offset-y: -150px;
 $angle-width: 29px;
 $angle-height: 29px;
 $angle-total-width: 240px;
 $angle-total-height: 180px;
 $angle-image: '../images/sprite.png';
-$angle: (210px, 120px, -210px, -120px, 29px, 29px, 240px, 180px, '../images/sprite.png', 'angle', );
+$angle: (180px, 150px, -180px, -150px, 29px, 29px, 240px, 180px, '../images/sprite.png', 'angle', );
 $calendar-name: 'calendar';
 $calendar-x: 0px;
 $calendar-y: 0px;
@@ -108,17 +108,28 @@ $pie-chart-total-width: 240px;
 $pie-chart-total-height: 180px;
 $pie-chart-image: '../images/sprite.png';
 $pie-chart: (60px, 120px, -60px, -120px, 60px, 60px, 240px, 180px, '../images/sprite.png', 'pie-chart', );
+$plus-red-name: 'plus-red';
+$plus-red-x: 180px;
+$plus-red-y: 120px;
+$plus-red-offset-x: -180px;
+$plus-red-offset-y: -120px;
+$plus-red-width: 30px;
+$plus-red-height: 30px;
+$plus-red-total-width: 240px;
+$plus-red-total-height: 180px;
+$plus-red-image: '../images/sprite.png';
+$plus-red: (180px, 120px, -180px, -120px, 30px, 30px, 240px, 180px, '../images/sprite.png', 'plus-red', );
 $plus-name: 'plus';
-$plus-x: 180px;
+$plus-x: 210px;
 $plus-y: 120px;
-$plus-offset-x: -180px;
+$plus-offset-x: -210px;
 $plus-offset-y: -120px;
 $plus-width: 30px;
 $plus-height: 30px;
 $plus-total-width: 240px;
 $plus-total-height: 180px;
 $plus-image: '../images/sprite.png';
-$plus: (180px, 120px, -180px, -120px, 30px, 30px, 240px, 180px, '../images/sprite.png', 'plus', );
+$plus: (210px, 120px, -210px, -120px, 30px, 30px, 240px, 180px, '../images/sprite.png', 'plus', );
 $price-tag-name: 'price-tag';
 $price-tag-x: 120px;
 $price-tag-y: 120px;
@@ -155,7 +166,7 @@ $team: (180px, 60px, -180px, -60px, 60px, 60px, 240px, 180px, '../images/sprite.
 $spritesheet-width: 240px;
 $spritesheet-height: 180px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($angle, $calendar, $chat, $contract, $employee, $group, $joystick, $performance, $pie-chart, $plus, $price-tag, $security, $team, );
+$spritesheet-sprites: ($angle, $calendar, $chat, $contract, $employee, $group, $joystick, $performance, $pie-chart, $plus-red, $plus, $price-tag, $security, $team, );
 $spritesheet: (240px, 180px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
