--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -7,11 +7,12 @@ html(lang='ru')
         link(rel="stylesheet" href="css/main.min.css")
         title CyberX
     body
-        //- include sections/first
-        //- include sections/form_one
-        //- include sections/second
-        //- include sections/third
-        //- include sections/fourth
+        include sections/first
+        include sections/form_one
+        include sections/second
+        include sections/third
+        include sections/fourth
         include sections/fifth
         include sections/form_too
         include sections/sixth
+        include sections/eighth
