--- a/source/styles/global/sprite.scss
+++ b/source/styles/global/sprite.scss
@@ -10,164 +10,186 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
 $angle-name: 'angle';
-$angle-x: 180px;
-$angle-y: 150px;
-$angle-offset-x: -180px;
-$angle-offset-y: -150px;
+$angle-x: 245px;
+$angle-y: 125px;
+$angle-offset-x: -245px;
+$angle-offset-y: -125px;
 $angle-width: 29px;
 $angle-height: 29px;
-$angle-total-width: 240px;
-$angle-total-height: 180px;
+$angle-total-width: 289px;
+$angle-total-height: 238px;
 $angle-image: '../images/sprite.png';
-$angle: (180px, 150px, -180px, -150px, 29px, 29px, 240px, 180px, '../images/sprite.png', 'angle', );
+$angle: (245px, 125px, -245px, -125px, 29px, 29px, 289px, 238px, '../images/sprite.png', 'angle', );
 $calendar-name: 'calendar';
 $calendar-x: 0px;
-$calendar-y: 0px;
+$calendar-y: 58px;
 $calendar-offset-x: 0px;
-$calendar-offset-y: 0px;
+$calendar-offset-y: -58px;
 $calendar-width: 60px;
 $calendar-height: 60px;
-$calendar-total-width: 240px;
-$calendar-total-height: 180px;
+$calendar-total-width: 289px;
+$calendar-total-height: 238px;
 $calendar-image: '../images/sprite.png';
-$calendar: (0px, 0px, 0px, 0px, 60px, 60px, 240px, 180px, '../images/sprite.png', 'calendar', );
+$calendar: (0px, 58px, 0px, -58px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'calendar', );
 $chat-name: 'chat';
-$chat-x: 60px;
+$chat-x: 65px;
 $chat-y: 0px;
-$chat-offset-x: -60px;
+$chat-offset-x: -65px;
 $chat-offset-y: 0px;
 $chat-width: 60px;
 $chat-height: 60px;
-$chat-total-width: 240px;
-$chat-total-height: 180px;
+$chat-total-width: 289px;
+$chat-total-height: 238px;
 $chat-image: '../images/sprite.png';
-$chat: (60px, 0px, -60px, 0px, 60px, 60px, 240px, 180px, '../images/sprite.png', 'chat', );
+$chat: (65px, 0px, -65px, 0px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'chat', );
 $contract-name: 'contract';
-$contract-x: 0px;
-$contract-y: 60px;
-$contract-offset-x: 0px;
-$contract-offset-y: -60px;
+$contract-x: 125px;
+$contract-y: 0px;
+$contract-offset-x: -125px;
+$contract-offset-y: 0px;
 $contract-width: 60px;
 $contract-height: 60px;
-$contract-total-width: 240px;
-$contract-total-height: 180px;
+$contract-total-width: 289px;
+$contract-total-height: 238px;
 $contract-image: '../images/sprite.png';
-$contract: (0px, 60px, 0px, -60px, 60px, 60px, 240px, 180px, '../images/sprite.png', 'contract', );
+$contract: (125px, 0px, -125px, 0px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'contract', );
 $employee-name: 'employee';
-$employee-x: 60px;
-$employee-y: 60px;
-$employee-offset-x: -60px;
-$employee-offset-y: -60px;
+$employee-x: 0px;
+$employee-y: 118px;
+$employee-offset-x: 0px;
+$employee-offset-y: -118px;
 $employee-width: 60px;
 $employee-height: 60px;
-$employee-total-width: 240px;
-$employee-total-height: 180px;
+$employee-total-width: 289px;
+$employee-total-height: 238px;
 $employee-image: '../images/sprite.png';
-$employee: (60px, 60px, -60px, -60px, 60px, 60px, 240px, 180px, '../images/sprite.png', 'employee', );
+$employee: (0px, 118px, 0px, -118px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'employee', );
 $group-name: 'group';
-$group-x: 120px;
-$group-y: 0px;
-$group-offset-x: -120px;
-$group-offset-y: 0px;
+$group-x: 60px;
+$group-y: 118px;
+$group-offset-x: -60px;
+$group-offset-y: -118px;
 $group-width: 60px;
 $group-height: 60px;
-$group-total-width: 240px;
-$group-total-height: 180px;
+$group-total-width: 289px;
+$group-total-height: 238px;
 $group-image: '../images/sprite.png';
-$group: (120px, 0px, -120px, 0px, 60px, 60px, 240px, 180px, '../images/sprite.png', 'group', );
+$group: (60px, 118px, -60px, -118px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'group', );
 $joystick-name: 'joystick';
 $joystick-x: 120px;
-$joystick-y: 60px;
+$joystick-y: 118px;
 $joystick-offset-x: -120px;
-$joystick-offset-y: -60px;
+$joystick-offset-y: -118px;
 $joystick-width: 60px;
 $joystick-height: 60px;
-$joystick-total-width: 240px;
-$joystick-total-height: 180px;
+$joystick-total-width: 289px;
+$joystick-total-height: 238px;
 $joystick-image: '../images/sprite.png';
-$joystick: (120px, 60px, -120px, -60px, 60px, 60px, 240px, 180px, '../images/sprite.png', 'joystick', );
+$joystick: (120px, 118px, -120px, -118px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'joystick', );
+$myself-name: 'myself';
+$myself-x: 245px;
+$myself-y: 0px;
+$myself-offset-x: -245px;
+$myself-offset-y: 0px;
+$myself-width: 44px;
+$myself-height: 65px;
+$myself-total-width: 289px;
+$myself-total-height: 238px;
+$myself-image: '../images/sprite.png';
+$myself: (245px, 0px, -245px, 0px, 44px, 65px, 289px, 238px, '../images/sprite.png', 'myself', );
 $performance-name: 'performance';
-$performance-x: 0px;
-$performance-y: 120px;
-$performance-offset-x: 0px;
-$performance-offset-y: -120px;
+$performance-x: 185px;
+$performance-y: 0px;
+$performance-offset-x: -185px;
+$performance-offset-y: 0px;
 $performance-width: 60px;
 $performance-height: 60px;
-$performance-total-width: 240px;
-$performance-total-height: 180px;
+$performance-total-width: 289px;
+$performance-total-height: 238px;
 $performance-image: '../images/sprite.png';
-$performance: (0px, 120px, 0px, -120px, 60px, 60px, 240px, 180px, '../images/sprite.png', 'performance', );
+$performance: (185px, 0px, -185px, 0px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'performance', );
 $pie-chart-name: 'pie-chart';
-$pie-chart-x: 60px;
-$pie-chart-y: 120px;
-$pie-chart-offset-x: -60px;
-$pie-chart-offset-y: -120px;
+$pie-chart-x: 185px;
+$pie-chart-y: 60px;
+$pie-chart-offset-x: -185px;
+$pie-chart-offset-y: -60px;
 $pie-chart-width: 60px;
 $pie-chart-height: 60px;
-$pie-chart-total-width: 240px;
-$pie-chart-total-height: 180px;
+$pie-chart-total-width: 289px;
+$pie-chart-total-height: 238px;
 $pie-chart-image: '../images/sprite.png';
-$pie-chart: (60px, 120px, -60px, -120px, 60px, 60px, 240px, 180px, '../images/sprite.png', 'pie-chart', );
+$pie-chart: (185px, 60px, -185px, -60px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'pie-chart', );
 $plus-red-name: 'plus-red';
-$plus-red-x: 180px;
-$plus-red-y: 120px;
-$plus-red-offset-x: -180px;
-$plus-red-offset-y: -120px;
+$plus-red-x: 245px;
+$plus-red-y: 65px;
+$plus-red-offset-x: -245px;
+$plus-red-offset-y: -65px;
 $plus-red-width: 30px;
 $plus-red-height: 30px;
-$plus-red-total-width: 240px;
-$plus-red-total-height: 180px;
+$plus-red-total-width: 289px;
+$plus-red-total-height: 238px;
 $plus-red-image: '../images/sprite.png';
-$plus-red: (180px, 120px, -180px, -120px, 30px, 30px, 240px, 180px, '../images/sprite.png', 'plus-red', );
+$plus-red: (245px, 65px, -245px, -65px, 30px, 30px, 289px, 238px, '../images/sprite.png', 'plus-red', );
 $plus-name: 'plus';
-$plus-x: 210px;
-$plus-y: 120px;
-$plus-offset-x: -210px;
-$plus-offset-y: -120px;
+$plus-x: 245px;
+$plus-y: 95px;
+$plus-offset-x: -245px;
+$plus-offset-y: -95px;
 $plus-width: 30px;
 $plus-height: 30px;
-$plus-total-width: 240px;
-$plus-total-height: 180px;
+$plus-total-width: 289px;
+$plus-total-height: 238px;
 $plus-image: '../images/sprite.png';
-$plus: (210px, 120px, -210px, -120px, 30px, 30px, 240px, 180px, '../images/sprite.png', 'plus', );
+$plus: (245px, 95px, -245px, -95px, 30px, 30px, 289px, 238px, '../images/sprite.png', 'plus', );
 $price-tag-name: 'price-tag';
-$price-tag-x: 120px;
-$price-tag-y: 120px;
-$price-tag-offset-x: -120px;
-$price-tag-offset-y: -120px;
+$price-tag-x: 0px;
+$price-tag-y: 178px;
+$price-tag-offset-x: 0px;
+$price-tag-offset-y: -178px;
 $price-tag-width: 60px;
 $price-tag-height: 60px;
-$price-tag-total-width: 240px;
-$price-tag-total-height: 180px;
+$price-tag-total-width: 289px;
+$price-tag-total-height: 238px;
 $price-tag-image: '../images/sprite.png';
-$price-tag: (120px, 120px, -120px, -120px, 60px, 60px, 240px, 180px, '../images/sprite.png', 'price-tag', );
+$price-tag: (0px, 178px, 0px, -178px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'price-tag', );
 $security-name: 'security';
-$security-x: 180px;
-$security-y: 0px;
-$security-offset-x: -180px;
-$security-offset-y: 0px;
+$security-x: 60px;
+$security-y: 178px;
+$security-offset-x: -60px;
+$security-offset-y: -178px;
 $security-width: 60px;
 $security-height: 60px;
-$security-total-width: 240px;
-$security-total-height: 180px;
+$security-total-width: 289px;
+$security-total-height: 238px;
 $security-image: '../images/sprite.png';
-$security: (180px, 0px, -180px, 0px, 60px, 60px, 240px, 180px, '../images/sprite.png', 'security', );
+$security: (60px, 178px, -60px, -178px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'security', );
 $team-name: 'team';
-$team-x: 180px;
-$team-y: 60px;
-$team-offset-x: -180px;
-$team-offset-y: -60px;
+$team-x: 120px;
+$team-y: 178px;
+$team-offset-x: -120px;
+$team-offset-y: -178px;
 $team-width: 60px;
 $team-height: 60px;
-$team-total-width: 240px;
-$team-total-height: 180px;
+$team-total-width: 289px;
+$team-total-height: 238px;
 $team-image: '../images/sprite.png';
-$team: (180px, 60px, -180px, -60px, 60px, 60px, 240px, 180px, '../images/sprite.png', 'team', );
-$spritesheet-width: 240px;
-$spritesheet-height: 180px;
+$team: (120px, 178px, -120px, -178px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'team', );
+$withus-name: 'withus';
+$withus-x: 0px;
+$withus-y: 0px;
+$withus-offset-x: 0px;
+$withus-offset-y: 0px;
+$withus-width: 65px;
+$withus-height: 58px;
+$withus-total-width: 289px;
+$withus-total-height: 238px;
+$withus-image: '../images/sprite.png';
+$withus: (0px, 0px, 0px, 0px, 65px, 58px, 289px, 238px, '../images/sprite.png', 'withus', );
+$spritesheet-width: 289px;
+$spritesheet-height: 238px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($angle, $calendar, $chat, $contract, $employee, $group, $joystick, $performance, $pie-chart, $plus-red, $plus, $price-tag, $security, $team, );
-$spritesheet: (240px, 180px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($angle, $calendar, $chat, $contract, $employee, $group, $joystick, $myself, $performance, $pie-chart, $plus-red, $plus, $price-tag, $security, $team, $withus, );
+$spritesheet: (289px, 238px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
