--- a/source/template/sections/eighth.pug
+++ b/source/template/sections/eighth.pug
@@ -40,7 +40,7 @@ section.eighth
                             .eighth__user-descr
                                 | от 3 до 5 человек
                             .eighth__user-text
-                                | Общий чек около 3 000~ <br>Будут покупать еду и напитки, заказывать кальян
+                                | Общий чек около 3 000<span>~</span> <br>Будут покупать еду и напитки, заказывать кальян
                             .eighth__user-decor
                                 .icon.icon-plus-red
                     .eighth__user
@@ -52,7 +52,7 @@ section.eighth
                             .eighth__user-descr
                                 | 16 лет
                             .eighth__user-text
-                                | Готова потратить до 500 руб~ <br>Будет покупать еду и напитки.
+                                | Готова потратить до 500 руб<span>~</span> <br>Будет покупать еду и напитки.
                             .eighth__user-decor
                                 .icon.icon-plus-red
                     .eighth__user
@@ -64,7 +64,7 @@ section.eighth
                             .eighth__user-descr
                                 | 34 года
                             .eighth__user-text
-                                | Готов потратить до 1 500 руб~ <br>Будет участвовать в турнирах.
+                                | Готов потратить до 1 500 руб<span>~</span> <br>Будет участвовать в турнирах.
                             .eighth__user-decor
                                 .icon.icon-plus-red
 
