--- a/source/styles/sections/eighth.scss
+++ b/source/styles/sections/eighth.scss
@@ -175,6 +175,10 @@
         font-size: 18px;
         letter-spacing: -0.4px;
         color: #3b3b3b;
+
+        span {
+            font-size: 24px;
+        }
     }
 
     &__user-decor {
