--- a/source/styles/global/sprite.scss
+++ b/source/styles/global/sprite.scss
@@ -10,186 +10,208 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
 $angle-name: 'angle';
-$angle-x: 245px;
+$angle-x: 262px;
 $angle-y: 125px;
-$angle-offset-x: -245px;
+$angle-offset-x: -262px;
 $angle-offset-y: -125px;
 $angle-width: 29px;
 $angle-height: 29px;
-$angle-total-width: 289px;
-$angle-total-height: 238px;
+$angle-total-width: 306px;
+$angle-total-height: 246px;
 $angle-image: '../images/sprite.png';
-$angle: (245px, 125px, -245px, -125px, 29px, 29px, 289px, 238px, '../images/sprite.png', 'angle', );
+$angle: (262px, 125px, -262px, -125px, 29px, 29px, 306px, 246px, '../images/sprite.png', 'angle', );
 $calendar-name: 'calendar';
 $calendar-x: 0px;
-$calendar-y: 58px;
+$calendar-y: 66px;
 $calendar-offset-x: 0px;
-$calendar-offset-y: -58px;
+$calendar-offset-y: -66px;
 $calendar-width: 60px;
 $calendar-height: 60px;
-$calendar-total-width: 289px;
-$calendar-total-height: 238px;
+$calendar-total-width: 306px;
+$calendar-total-height: 246px;
 $calendar-image: '../images/sprite.png';
-$calendar: (0px, 58px, 0px, -58px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'calendar', );
+$calendar: (0px, 66px, 0px, -66px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'calendar', );
 $chat-name: 'chat';
-$chat-x: 65px;
-$chat-y: 0px;
-$chat-offset-x: -65px;
-$chat-offset-y: 0px;
+$chat-x: 60px;
+$chat-y: 66px;
+$chat-offset-x: -60px;
+$chat-offset-y: -66px;
 $chat-width: 60px;
 $chat-height: 60px;
-$chat-total-width: 289px;
-$chat-total-height: 238px;
+$chat-total-width: 306px;
+$chat-total-height: 246px;
 $chat-image: '../images/sprite.png';
-$chat: (65px, 0px, -65px, 0px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'chat', );
+$chat: (60px, 66px, -60px, -66px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'chat', );
 $contract-name: 'contract';
-$contract-x: 125px;
+$contract-x: 142px;
 $contract-y: 0px;
-$contract-offset-x: -125px;
+$contract-offset-x: -142px;
 $contract-offset-y: 0px;
 $contract-width: 60px;
 $contract-height: 60px;
-$contract-total-width: 289px;
-$contract-total-height: 238px;
+$contract-total-width: 306px;
+$contract-total-height: 246px;
 $contract-image: '../images/sprite.png';
-$contract: (125px, 0px, -125px, 0px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'contract', );
+$contract: (142px, 0px, -142px, 0px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'contract', );
+$elem-bg-name: 'elem-bg';
+$elem-bg-x: 0px;
+$elem-bg-y: 0px;
+$elem-bg-offset-x: 0px;
+$elem-bg-offset-y: 0px;
+$elem-bg-width: 77px;
+$elem-bg-height: 66px;
+$elem-bg-total-width: 306px;
+$elem-bg-total-height: 246px;
+$elem-bg-image: '../images/sprite.png';
+$elem-bg: (0px, 0px, 0px, 0px, 77px, 66px, 306px, 246px, '../images/sprite.png', 'elem-bg', );
 $employee-name: 'employee';
-$employee-x: 0px;
-$employee-y: 118px;
-$employee-offset-x: 0px;
-$employee-offset-y: -118px;
+$employee-x: 142px;
+$employee-y: 60px;
+$employee-offset-x: -142px;
+$employee-offset-y: -60px;
 $employee-width: 60px;
 $employee-height: 60px;
-$employee-total-width: 289px;
-$employee-total-height: 238px;
+$employee-total-width: 306px;
+$employee-total-height: 246px;
 $employee-image: '../images/sprite.png';
-$employee: (0px, 118px, 0px, -118px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'employee', );
+$employee: (142px, 60px, -142px, -60px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'employee', );
 $group-name: 'group';
-$group-x: 60px;
-$group-y: 118px;
-$group-offset-x: -60px;
-$group-offset-y: -118px;
+$group-x: 0px;
+$group-y: 126px;
+$group-offset-x: 0px;
+$group-offset-y: -126px;
 $group-width: 60px;
 $group-height: 60px;
-$group-total-width: 289px;
-$group-total-height: 238px;
+$group-total-width: 306px;
+$group-total-height: 246px;
 $group-image: '../images/sprite.png';
-$group: (60px, 118px, -60px, -118px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'group', );
+$group: (0px, 126px, 0px, -126px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'group', );
 $joystick-name: 'joystick';
-$joystick-x: 120px;
-$joystick-y: 118px;
-$joystick-offset-x: -120px;
-$joystick-offset-y: -118px;
+$joystick-x: 60px;
+$joystick-y: 126px;
+$joystick-offset-x: -60px;
+$joystick-offset-y: -126px;
 $joystick-width: 60px;
 $joystick-height: 60px;
-$joystick-total-width: 289px;
-$joystick-total-height: 238px;
+$joystick-total-width: 306px;
+$joystick-total-height: 246px;
 $joystick-image: '../images/sprite.png';
-$joystick: (120px, 118px, -120px, -118px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'joystick', );
+$joystick: (60px, 126px, -60px, -126px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'joystick', );
 $myself-name: 'myself';
-$myself-x: 245px;
+$myself-x: 262px;
 $myself-y: 0px;
-$myself-offset-x: -245px;
+$myself-offset-x: -262px;
 $myself-offset-y: 0px;
 $myself-width: 44px;
 $myself-height: 65px;
-$myself-total-width: 289px;
-$myself-total-height: 238px;
+$myself-total-width: 306px;
+$myself-total-height: 246px;
 $myself-image: '../images/sprite.png';
-$myself: (245px, 0px, -245px, 0px, 44px, 65px, 289px, 238px, '../images/sprite.png', 'myself', );
+$myself: (262px, 0px, -262px, 0px, 44px, 65px, 306px, 246px, '../images/sprite.png', 'myself', );
 $performance-name: 'performance';
-$performance-x: 185px;
-$performance-y: 0px;
-$performance-offset-x: -185px;
-$performance-offset-y: 0px;
+$performance-x: 120px;
+$performance-y: 126px;
+$performance-offset-x: -120px;
+$performance-offset-y: -126px;
 $performance-width: 60px;
 $performance-height: 60px;
-$performance-total-width: 289px;
-$performance-total-height: 238px;
+$performance-total-width: 306px;
+$performance-total-height: 246px;
 $performance-image: '../images/sprite.png';
-$performance: (185px, 0px, -185px, 0px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'performance', );
+$performance: (120px, 126px, -120px, -126px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'performance', );
 $pie-chart-name: 'pie-chart';
-$pie-chart-x: 185px;
-$pie-chart-y: 60px;
-$pie-chart-offset-x: -185px;
-$pie-chart-offset-y: -60px;
+$pie-chart-x: 202px;
+$pie-chart-y: 0px;
+$pie-chart-offset-x: -202px;
+$pie-chart-offset-y: 0px;
 $pie-chart-width: 60px;
 $pie-chart-height: 60px;
-$pie-chart-total-width: 289px;
-$pie-chart-total-height: 238px;
+$pie-chart-total-width: 306px;
+$pie-chart-total-height: 246px;
 $pie-chart-image: '../images/sprite.png';
-$pie-chart: (185px, 60px, -185px, -60px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'pie-chart', );
+$pie-chart: (202px, 0px, -202px, 0px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'pie-chart', );
+$plus-red-mini-name: 'plus-red--mini';
+$plus-red-mini-x: 262px;
+$plus-red-mini-y: 154px;
+$plus-red-mini-offset-x: -262px;
+$plus-red-mini-offset-y: -154px;
+$plus-red-mini-width: 18px;
+$plus-red-mini-height: 18px;
+$plus-red-mini-total-width: 306px;
+$plus-red-mini-total-height: 246px;
+$plus-red-mini-image: '../images/sprite.png';
+$plus-red-mini: (262px, 154px, -262px, -154px, 18px, 18px, 306px, 246px, '../images/sprite.png', 'plus-red--mini', );
 $plus-red-name: 'plus-red';
-$plus-red-x: 245px;
+$plus-red-x: 262px;
 $plus-red-y: 65px;
-$plus-red-offset-x: -245px;
+$plus-red-offset-x: -262px;
 $plus-red-offset-y: -65px;
 $plus-red-width: 30px;
 $plus-red-height: 30px;
-$plus-red-total-width: 289px;
-$plus-red-total-height: 238px;
+$plus-red-total-width: 306px;
+$plus-red-total-height: 246px;
 $plus-red-image: '../images/sprite.png';
-$plus-red: (245px, 65px, -245px, -65px, 30px, 30px, 289px, 238px, '../images/sprite.png', 'plus-red', );
+$plus-red: (262px, 65px, -262px, -65px, 30px, 30px, 306px, 246px, '../images/sprite.png', 'plus-red', );
 $plus-name: 'plus';
-$plus-x: 245px;
+$plus-x: 262px;
 $plus-y: 95px;
-$plus-offset-x: -245px;
+$plus-offset-x: -262px;
 $plus-offset-y: -95px;
 $plus-width: 30px;
 $plus-height: 30px;
-$plus-total-width: 289px;
-$plus-total-height: 238px;
+$plus-total-width: 306px;
+$plus-total-height: 246px;
 $plus-image: '../images/sprite.png';
-$plus: (245px, 95px, -245px, -95px, 30px, 30px, 289px, 238px, '../images/sprite.png', 'plus', );
+$plus: (262px, 95px, -262px, -95px, 30px, 30px, 306px, 246px, '../images/sprite.png', 'plus', );
 $price-tag-name: 'price-tag';
-$price-tag-x: 0px;
-$price-tag-y: 178px;
-$price-tag-offset-x: 0px;
-$price-tag-offset-y: -178px;
+$price-tag-x: 202px;
+$price-tag-y: 60px;
+$price-tag-offset-x: -202px;
+$price-tag-offset-y: -60px;
 $price-tag-width: 60px;
 $price-tag-height: 60px;
-$price-tag-total-width: 289px;
-$price-tag-total-height: 238px;
+$price-tag-total-width: 306px;
+$price-tag-total-height: 246px;
 $price-tag-image: '../images/sprite.png';
-$price-tag: (0px, 178px, 0px, -178px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'price-tag', );
+$price-tag: (202px, 60px, -202px, -60px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'price-tag', );
 $security-name: 'security';
-$security-x: 60px;
-$security-y: 178px;
-$security-offset-x: -60px;
-$security-offset-y: -178px;
+$security-x: 202px;
+$security-y: 120px;
+$security-offset-x: -202px;
+$security-offset-y: -120px;
 $security-width: 60px;
 $security-height: 60px;
-$security-total-width: 289px;
-$security-total-height: 238px;
+$security-total-width: 306px;
+$security-total-height: 246px;
 $security-image: '../images/sprite.png';
-$security: (60px, 178px, -60px, -178px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'security', );
+$security: (202px, 120px, -202px, -120px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'security', );
 $team-name: 'team';
-$team-x: 120px;
-$team-y: 178px;
-$team-offset-x: -120px;
-$team-offset-y: -178px;
+$team-x: 0px;
+$team-y: 186px;
+$team-offset-x: 0px;
+$team-offset-y: -186px;
 $team-width: 60px;
 $team-height: 60px;
-$team-total-width: 289px;
-$team-total-height: 238px;
+$team-total-width: 306px;
+$team-total-height: 246px;
 $team-image: '../images/sprite.png';
-$team: (120px, 178px, -120px, -178px, 60px, 60px, 289px, 238px, '../images/sprite.png', 'team', );
+$team: (0px, 186px, 0px, -186px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'team', );
 $withus-name: 'withus';
-$withus-x: 0px;
+$withus-x: 77px;
 $withus-y: 0px;
-$withus-offset-x: 0px;
+$withus-offset-x: -77px;
 $withus-offset-y: 0px;
 $withus-width: 65px;
 $withus-height: 58px;
-$withus-total-width: 289px;
-$withus-total-height: 238px;
+$withus-total-width: 306px;
+$withus-total-height: 246px;
 $withus-image: '../images/sprite.png';
-$withus: (0px, 0px, 0px, 0px, 65px, 58px, 289px, 238px, '../images/sprite.png', 'withus', );
-$spritesheet-width: 289px;
-$spritesheet-height: 238px;
+$withus: (77px, 0px, -77px, 0px, 65px, 58px, 306px, 246px, '../images/sprite.png', 'withus', );
+$spritesheet-width: 306px;
+$spritesheet-height: 246px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($angle, $calendar, $chat, $contract, $employee, $group, $joystick, $myself, $performance, $pie-chart, $plus-red, $plus, $price-tag, $security, $team, $withus, );
-$spritesheet: (289px, 238px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($angle, $calendar, $chat, $contract, $elem-bg, $employee, $group, $joystick, $myself, $performance, $pie-chart, $plus-red-mini, $plus-red, $plus, $price-tag, $security, $team, $withus, );
+$spritesheet: (306px, 246px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
