--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -16,6 +16,5 @@
 @import "sections/sixth";
 @import "sections/eighth";
 @import "sections/ninth";
-
-
-
+@import "sections/tenth";
+@import "sections/eleventh";
